[project]
name = "bojansocial-example-bot"
version = "0.1.0"
description = ""
authors = [{ name = "rgb", email = "admin@bojan.social" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["requests (>=2.34.2,<3.0.0)"]

[tool.poetry.scripts]
bojanexamplebot = "bojansocial_example_bot.main:main"

[tool.poetry]
packages = [{ include = "bojansocial_example_bot", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
